--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ p {
   font-size: 18px;
 }
 
+html, body {
+  background-color: #fafafa;
+}
+
 nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -19,6 +23,14 @@ nav {
 
 nav img {
   padding: 1rem;
+}
+
+nav img.mobileLogo {
+  display: none;
+}
+
+nav img.burgerMenu {
+  display: none;
 }
 
 nav div {
@@ -55,14 +67,14 @@ nav div ul li {
 nav div ul li a {
   text-decoration: none;
   color: black;
-  padding: 1.2rem;
-  border: 1.5px solid white;
+  padding: 1rem;
+  border: 1.5px solid #fafafa;
   border-radius: 10px;
   -webkit-transition: all 0.25s ease;
   transition: all 0.25s ease;
 }
 
-nav div ul li a:hover {
+nav div ul li a.register {
   border-color: black;
 }
 
@@ -71,10 +83,58 @@ nav div ul li a img {
   padding-left: 0.2rem;
 }
 
+nav div ul li.subList {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+}
+
+nav div ul li.subList ul.dropdown {
+  background-color: white;
+  border-radius: 10px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: absolute;
+  top: 100%;
+  right: 1rem;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
+}
+
+nav div ul li.subList ul.dropdown li {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+nav div ul li.subList ul.dropdown li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: none;
+  padding: 0.5rem 1.5rem;
+}
+
+nav div ul li.subList ul.dropdown li a img {
+  padding: 0;
+  padding-right: 0.2rem;
+}
+
 main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap-reverse;
+      flex-wrap: wrap-reverse;
   padding: 2rem 4rem;
 }
 
@@ -102,6 +162,10 @@ main section.content h1 {
   font-size: 80px;
 }
 
+main section.content h1.mobileH1 {
+  display: none;
+}
+
 main section.content p {
   color: dimgray;
   width: 60%;
@@ -113,7 +177,7 @@ main section.content button {
   border-radius: 10px;
   background-color: #fafafa;
   font-weight: 700;
-  margin: 2.5rem 0;
+  margin: 2rem 0;
   padding: 1rem;
   -ms-flex-item-align: start;
       align-self: flex-start;
@@ -139,5 +203,62 @@ main section.pic {
 
 main section.pic img {
   width: 80%;
+}
+
+main section.pic img.mobileImg {
+  display: none;
+}
+
+@media screen and (max-width: 500px) {
+  nav div {
+    display: none;
+  }
+  nav img.mobileLogo {
+    display: block;
+  }
+  nav img.burgerMenu {
+    display: block;
+    cursor: pointer;
+  }
+  main {
+    padding: 0;
+  }
+  main section.pic {
+    padding: 0;
+  }
+  main section.pic img.desktopImg {
+    display: none;
+  }
+  main section.pic img.mobileImg {
+    display: block;
+    width: 100vw;
+  }
+  main section.content h1.desktopH1 {
+    display: none;
+  }
+  main section.content h1.mobileH1 {
+    display: block;
+    font-size: 40px;
+    text-align: center;
+    padding: 1rem 0;
+  }
+  main section.content p {
+    width: 100%;
+    padding: 0;
+    text-align: center;
+  }
+  main section.content button {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    background-color: black;
+    color: white;
+    -webkit-transition: all 0.25s ease;
+    transition: all 0.25s ease;
+  }
+  main section.content button:hover {
+    background-color: #fafafa;
+    color: black;
+  }
 }
 /*# sourceMappingURL=style.css.map */
