--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,20 @@ html, body {
   background-color: #fafafa;
 }
 
+.dropdown {
+  background-color: white;
+  border-radius: 10px;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
+}
+
+.show {
+  visibility: visible;
+  opacity: 1;
+}
+
 nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -89,11 +103,10 @@ nav div ul li.subList {
       -ms-flex-direction: column;
           flex-direction: column;
   position: relative;
+  z-index: 5;
 }
 
 nav div ul li.subList ul.dropdown {
-  background-color: white;
-  border-radius: 10px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -101,10 +114,6 @@ nav div ul li.subList ul.dropdown {
   position: absolute;
   top: 100%;
   right: 1rem;
-  visibility: hidden;
-  opacity: 0;
-  -webkit-transition: all 0.3s ease-in;
-  transition: all 0.3s ease-in;
 }
 
 nav div ul li.subList ul.dropdown li {
@@ -114,6 +123,7 @@ nav div ul li.subList ul.dropdown li {
 }
 
 nav div ul li.subList ul.dropdown li a {
+  font-size: 16px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -121,12 +131,17 @@ nav div ul li.subList ul.dropdown li a {
       -ms-flex-align: center;
           align-items: center;
   border: none;
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 0.8rem;
 }
 
 nav div ul li.subList ul.dropdown li a img {
   padding: 0;
   padding-right: 0.2rem;
+}
+
+nav div ul li.subList#company ul.dropdown {
+  right: 0;
+  left: 1rem;
 }
 
 main {
