--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,10 @@ nav img.burgerMenu {
   display: none;
 }
 
+nav img.closeMenu {
+  display: none;
+}
+
 nav div {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -54,6 +58,8 @@ nav div {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease;
 }
 
 nav div ul {
@@ -278,15 +284,51 @@ main section.pic img.mobileImg {
 }
 
 @media screen and (max-width: 500px) {
-  nav div {
-    display: none;
-  }
   nav img.mobileLogo {
     display: block;
   }
   nav img.burgerMenu {
     display: block;
     cursor: pointer;
+  }
+  nav img.closeMenu {
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+    display: block;
+    cursor: pointer;
+  }
+  nav div {
+    display: none;
+  }
+  nav div#menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 5;
+    background-color: #fafafa;
+    height: 100vh;
+  }
+  nav div#menu img#logo {
+    display: none;
+  }
+  nav div#menu ul.option {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  nav div#menu ul.option li {
+    margin: 0 1.5rem;
   }
   main section.content {
     -webkit-box-align: center;
