--- a/style.scss
+++ b/style.scss
@@ -23,9 +23,16 @@ html, body{
     opacity: 0;
     transition: all 0.3s ease-in;
 }
-.show{
+.visibility{
     visibility: visible;
     opacity: 1;
+}
+
+.arrowShow{
+    display: inline-block;
+}
+.arrowHide{
+    display: none;
 }
 
 nav{
