--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,18 @@ html, body {
   display: none;
 }
 
+.blackBack {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+  -webkit-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
+}
+
 nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -117,7 +129,7 @@ nav div ul li.subList {
       -ms-flex-direction: column;
           flex-direction: column;
   position: relative;
-  z-index: 5;
+  z-index: 4;
 }
 
 nav div ul li.subList ul.dropdown {
@@ -306,6 +318,12 @@ main section.pic img.mobileImg {
     cursor: pointer;
   }
   nav div {
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-in;
+    transition: all 0.3s ease-in;
+  }
+  nav div#membership {
     display: none;
   }
   nav div#menu {
@@ -334,9 +352,22 @@ main section.pic img.mobileImg {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    padding: 1rem;
   }
   nav div#menu ul.option li {
-    margin: 0 1.5rem;
+    margin: 0;
+  }
+  nav div#menu ul.option li.subList ul.dropdown {
+    position: static;
+    visibility: visible;
+    opacity: 1;
+    -webkit-transition: none;
+    transition: none;
+    background-color: #fafafa;
+    display: none;
+  }
+  nav div#menu ul.option li.subList ul.dropdown li a {
+    padding: 0.5rem 0;
   }
   main section.content {
     -webkit-box-align: center;
