--- a/style.scss
+++ b/style.scss
@@ -35,6 +35,17 @@ html, body{
     display: none;
 }
 
+.blackBack{
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.3);
+    transition: all 0.3s ease-in;
+    }
+
 nav{
     display: flex;
     justify-content: space-between;
@@ -80,7 +91,7 @@ nav{
                 &.subList{
                     flex-direction: column;
                     position: relative;
-                    z-index: 5;
+                    z-index: 4;
                     ul.dropdown{
                         flex-direction: column;
                         position: absolute;
@@ -227,7 +238,12 @@ main{
             }
         }
         div{
-            display: none;
+            visibility: hidden;
+            opacity: 0;
+            transition: all 0.3s ease-in;
+            &#membership{
+                display: none;
+            }
             &#menu{
                 img#logo{
                     display: none;
@@ -243,8 +259,24 @@ main{
                 height: 100vh;
                 ul.option{
                     flex-direction: column;
+                    padding: 1rem;
                     li{
-                        margin: 0 1.5rem;
+                        margin: 0;
+                        &.subList{
+                            ul.dropdown{
+                                position: static;
+                                visibility: visible;
+                                opacity: 1;
+                                transition: none;
+                                background-color: $AlmostWhite;
+                                display: none;
+                                li{
+                                    a{
+                                        padding:0.5rem 0;
+                                    }
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -285,3 +317,4 @@ main{
         }
     }
 }
+
