--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ main section.pic img.mobileImg {
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 646px) {
   nav img.mobileLogo {
     display: block;
   }
@@ -322,15 +322,31 @@ main section.pic img.mobileImg {
     opacity: 0;
     -webkit-transition: all 0.3s ease-in;
     transition: all 0.3s ease-in;
-  }
-  nav div#membership {
-    display: none;
-  }
-  nav div#menu {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  nav div#membership {
+    position: fixed;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    bottom: 0;
+    right: 0;
+    z-index: 5;
+  }
+  nav div#membership ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 1.55rem;
+  }
+  nav div#menu {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
