--- a/style.scss
+++ b/style.scss
@@ -221,7 +221,7 @@ main{
     }
 }
 // mobile
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 646px) {
     nav{
         img{
             &.mobileLogo{
@@ -241,14 +241,23 @@ main{
             visibility: hidden;
             opacity: 0;
             transition: all 0.3s ease-in;
+            flex-direction: column;
             &#membership{
-                display: none;
+                position: fixed;
+                justify-content: center;
+                bottom: 0;
+                right: 0;
+                z-index: 5;
+                ul{
+                    flex-direction: column;
+                    justify-content: center;
+                    padding: 1.55rem;
+                }
             }
             &#menu{
                 img#logo{
                     display: none;
                 }
-                flex-direction: column;
                 justify-content: flex-start;
                 align-items: center;
                 position: fixed;
